# ngslab

./: .gitignore  MANIFEST.in  README.md  deploy.sh  development.md  pyproject.toml
demo/: Rakic1998_AgDrude.py  Rosenblatt2010_DrudeAu.py  agDrude.ref  auDrude.ref  demo_4layer.py  demo_AgSiO2.py  demo_DMD.py  demo_MDM.py  plot_complex_plane.py
src/: __init__.py  lambda_plane.py  lambda_plane_bak.py  slab.py  slab_bak.py
src/ngslab/: __init__.py  const.py  mat.py  model.py  plot.py
src/ngslab/demo/: 4layer_lossy_tmatrix.txt  4layer_tmatrix.txt  Rakic 1998 - Au (LD model).py  agjc.ref  demo_4layer.py  demo_4layer_vsPML.py  demo_AgSiO2.py  demo_AuTiO2.py  demo_DMD.py  demo_MDM.py  demo_interface.py
